--- a/ProgrammingInBlazorASPNETCore5/RockPaperAndScissors/RockPaperAndScissors/wwwroot/index.html
+++ b/ProgrammingInBlazorASPNETCore5/RockPaperAndScissors/RockPaperAndScissors/wwwroot/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BlazorMovies</title>
+    <title>RockPaperAndScissors</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="BlazorMovies.Client.styles.css" rel="stylesheet" />
-    <link href="css/custom.css" rel="stylesheet" />
+    <link href="RockPaperAndScissors.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -21,7 +20,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/Utilities.js"></script>
 </body>
 
 </html>
